--- a/蓝桥知识网.md
+++ b/蓝桥知识网.md
@@ -16,6 +16,108 @@
 它移动元素的参考点是元素内容区的上边缘,而不是元素的下边缘。
 ![image](https://github.com/lulu546/lanqiao-web-study/assets/87536202/ea30b508-4a0d-4d15-aecf-b86e58bce3b5)
 解决方案是使用盒子模型的padding-top，padding-top是增加了实际大小，而top更多的是一种偏移量。
+# 源码
+```
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
+    <title>蓝桥知识网</title>
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <body>
+    <!--TODO：请补充代码-->
+    <div  style="width: 100vw; background: #a6b1e1;height:473px;display: flex;justify-content: center;">
+      <div style="height:full;width: 1024px; display: flex;flex-direction: column;">
+        <div style="position: relative;padding-top:13px; display: flex; height: 46px; width: 100%;  gap: 365px;">
+          <div style="font-size: 18px; color: white;display: flex; height: full;justify-content: center;align-items: center;">
+            蓝桥知识网
+          </div>
+          <div style="gap: 16px;  font-size: 16px; color: white;display: flex; height: full;justify-content: center;align-items: center;">
+            <div>
+              首页
+            </div>
+            <div>
+              热门技术
+            </div>
+            <div>
+              使用手册
+            </div>
+            <div>
+              知识库
+            </div>
+            <div>
+              练习题
+            </div>
+            <div>
+              联系我们
+            </div>
+            <div>
+              更多
+            </div>
+          </div>
+        </div>
+        <div style="position: relative;padding-top:30px;font-size: 45px;color: black; width: full;text-align: center;">
+        蓝桥云课
+        </div>
+        <div style="position: relative;padding-top:62px;font-weight: 200; font-size: 21px;color: white; width: full;text-align: center;">
+          随时随地丰富你的技术栈！
+          </div>
+        <div style="padding-top:36px ;position: relative; font-weight: 200; font-size: 21px;color: white; text-align: center;">
+            <div style="padding: 10px; display: inline-block; width: auto; box-shadow: inset 0 0 0 2px #efbfbf; color: #efbfbf;border-radius: 2px;font-size: 18px;">
+              加入我们
+            </div>
+            </div>
+      </div> 
+
+    </div>
+    <div style="width: 100vw; display: flex;justify-content: center;">
+      <div style="margin-top: 74px; width: 1024px;">
+      <div style="width: full;height: 144px;display: flex;"> 
+        <div style="width: 502px;">
+            <div style="font-size: 30px;font-family: 200;color: black;">人工智能</div>
+            <div style="font-size: 18px;line-height: 1.4rem; color: #aaa;">人工智能亦称智械、机器智能，指由人制造出来的机器所表现出来的智能。通常人工智能是指通过普通计算机程序来呈现人类智能的技术。</div>
+        </div>
+        <div style="width: 502px;margin-left: 20px;">
+          <div style="font-size: 30px;font-family: 200;color: black;">前端开发</div>
+          <div style="font-size: 18px;line-height: 1.4rem; color: #aaa;">前端开发是创建 WEB 页面或 APP 等前端界面呈现给用户的过程，通过 HTML，CSS 及 JavaScript 以及衍生出来的各种技术、框架、解决方案，来实现互联网产品的用户界面交互。
+          </div>
+      </div>
+      </div>
+      <div style="width: full;height: 144px;display: flex;margin-top: 14px;"> 
+        <div style="width: 502px;">
+            <div style="font-size: 30px;font-family: 200;color: black;">后端开发</div>
+            <div style="font-size: 18px;line-height: 1.4rem; color: #aaa;">后端开发是实现页面的交互逻辑，通过使用后端语言来实现页面的操作功能，例如登录、注册等。            </div>
+        </div>
+        <div style="width: 502px;margin-left: 20px;">
+          <div style="font-size: 30px;font-family: 200;color: black;">信息安全</div>
+          <div style="font-size: 18px;line-height: 1.4rem; color: #aaa;">ISO（国际标准化组织）的定义为：为数据处理系统建立和采用的技术、管理上的安全保护，为的是保护计算机硬件、软件、数据不因偶然和恶意的原因而遭到破坏、更改和泄露。
+
+          </div>
+      </div>
+      </div>
+      </div>
+    </div>
+    <div style="height: 80px; width:100vw; border-top: solid 1px #aaa ;display: flex;justify-content: center;">
+      <div style="height: full; width: 1024px;">
+          <div style="width: full;margin-top: 30px;text-align: center;color: #aaa;font-size: 14px;">
+            © 蓝桥云课 2022
+          </div>
+          <div style="width: full;margin-top: 10px;text-align: center;color: #aaa;font-size: 14px;">
+            京公网安备 11010102005690 号 | 京 ICP 备 2021029920 号
+          </div>
+      </div>
+    </div>
+
+  </body>
+</html>
+
+```
+
 # 总结
 没什么难点，全程用div写的，毕竟不用管SEO。结果最后只给了我个通过，没给我具体的分数？Emmm....而我删掉一部分也给了通过,说明这个通过的范围很广。  
 这种题挺难受的，因为写算是比较费时间的。而且判断标准还不是很明确，不清楚能得多少分。  
