--- a/电影院排座位.md
+++ b/电影院排座位.md
@@ -178,8 +178,66 @@ CSS Grid 布局是一种为二维布局而设计的 CSS 技术，允许开发者
     
 # 源码
 ```
+* {
+  box-sizing: border-box;
+}
 
+body {
+  background-color: #242333;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  margin: 0;
+}
+
+.container {
+  perspective: 1000px;
+  width: 470px;
+}
+
+.screen {
+  background-color: #fff;
+  height: 70px;
+  width: 100%;
+  transform: rotateX(-45deg);
+  box-shadow: 0 3px 10px rgba(255, 255, 255, 0.7);
+  color: #242333;
+  text-align: center;
+  line-height: 70px;
+  font-size: 30px;
+}
+
+.seat {
+  background-color: #444451;
+  height: 40px;
+  width: 45px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+/* TODO：待补充代码 */
+.seat-area{
+  display: grid;
+  grid-template-columns: repeat(8,auto);
+  grid-template-rows: repeat(6,auto);
+  row-gap: 10px;
+  margin-top: 50px;
+  
+
+}
+.seat{
+  margin-right: 10px;
+}
+.seat:nth-child(2){
+  margin-right: 30px;
+}
+.seat:nth-child(6){
+  margin-right: 30px;
+}
 ```
 
 # 总结
-Vue2更新没想到还有坑，得用push，pop，shift，splice等函数或者用Vue.set实现。js的for...in，for...of，还有forEach，传统的for有点混淆了。但总体不算难。
+gird布局，gird布局说实话写的真不多，都是直接复制Copy代码，正好这次算是练一下。
