--- a/题目试炼/2023年大学组省赛/自适应页面.md
+++ b/题目试炼/2023年大学组省赛/自适应页面.md
@@ -50,7 +50,7 @@
    ```
 2. 页面媒体查询-点击页面实现  
    如果只用css，不使用js，他是如何记录点击状态的？  
-   利用复选框（checkbox）和标签（label）模拟点击  
+   利用**复选框**（checkbox）和**标签**（label）模拟点击  
    可以利用复选框（checkbox）隐藏，通过与之关联的标签（label）点击来改变复选框的选中状态，并使用 :checked 伪类与兄弟选择器来改变其他元素的样式，从而实现点击状态的模拟。  
     ```html
     <style>
@@ -67,47 +67,141 @@
     <label for="toggle">点击切换</label>
     <div class="content" style="display:none;">内容显示</div>
     ```
-在这个例子中，点击标签会改变复选框的选中状态，从而根据复选框的选中状态来控制 .content 的显示与隐藏。
+    在这个例子中，点击标签会改变复选框的选中状态，从而根据复选框的选中状态来控制 .content 的显示与隐藏。  
+    综上所述，虽然CSS本身不提供直接识别点击状态的功能，但通过上述技巧和方法，可以实现类似的效果。
 
-综上所述，虽然CSS本身不提供直接识别点击状态的功能，但通过上述技巧和方法，可以实现类似的效果。
+3. CSS选择器  
+   深入~~学习~~复习CSS选择器  
+   *[CSS-小鹿知识交流会](https://sbrs8lf797.feishu.cn/wiki/Fby5w7orBifLO6k1bTScSCbhnTh?from=from_copylink)*
+   1. 通用选择器  *
+   2. 类选择器 .ni
+   3. ID选择器 #ren
+   4. 类型选择器 span
+   5. 后代选择器 span input
+   6. 父子选择器 span > input
+   7. 并集选择器 span,input
+   8. 相邻兄弟选择器 span + input
+   9. 通用兄弟选择器 span ~ input
+   
+4.  label标签**一般是用来干什么的**？这个**label**和**input**是怎么关联的？  
+    label 标签通常用于**提高网页表单的可用性**，通过将**label绑定到特定的表单元素上**，可以使**点击 label 文字的时候也能够触发与之关联的表单元素**，例如 checkbox、radio button 或者 text input。在这个例子中，label 标签**通过 for 属性与 input 标签关联**。
+    for 属性的值应该与**目标 input 元素的 id 属性值相同**。这里，label 的 for 属性值为 "menu-btn"，与 input 元素的 id 值相匹配，这样点击 label 时就会触发与之关联的 input 元素。   
+    在这段代码中，**label 和 input 用于实现一个响应式导航菜单的切换按钮**。在屏幕宽度较小的设备上（如移动设备），通常导航菜单会被隐藏，并**通过一个切换按钮（通常是一个汉堡菜单图标）来控制导航菜单的显示和隐藏**。这里的 input 元素是一个类型为 checkbox 的输入框，它的显示被设置为 none（通过 CSS），所以用户看不到它。当用户点击 label（这里通过 .icon-menu::before 设置为一个汉堡菜单图标）时，由于 label 与 input 关联，会改变 input 的选中状态（checked 属性）。然后，可以通过 CSS 选择器（如 :checked 伪类）来检测 input 的状态，进而控制导航菜单的显示和隐藏。这是一种常见的技术，用于在不使用 JavaScript 的情况下创建交互式组件。
+5. for属性是什么？它该怎么用？
+    for 属性是 **HTML 中 label 标签的一个属性**，用于将 label 标签与表单元素（如 input, select, textarea 等）关联起来。  
+    当 **label 被点击时，与之关联的表单元素会获得焦点**，如果是**复选框（checkbox）或单选按钮（radio button）**，点击 **label 还会改变它们的选中状态**。
+6. label怎么使用？用来做什么？  
+   *[label标签-mdn](https://developer.mozilla.org/zh-CN/docs/Web/HTML/Element/label)*
+   HTML <label> 元素（标签）表示用户界面中某个元素的说明。
+   将一个 `<label>` 和一个 `<input>` 元素相关联主要有这些优点：
+   1. 标签文本不仅与其相应的文本输入元素在视觉上相关联，程序中也是如此。这意味着，当用户聚焦到这个表单输入元素时，屏幕阅读器可以读出标签，让使用辅助技术的用户更容易理解应输入什么数据。
+   2. 你可以点击关联的标签来聚焦或者激活这个输入元素，就像直接点击输入元素一样。这扩大了元素的可点击区域，让包括使用触屏设备在内的用户更容易激活这个元素。
+
+   将一个 `<label>` 和一个 `<input>` 元素匹配在一起，你需要给 `<input>` 一个 `id` 属性。而 `<label>` 需要一个 `for` 属性，其值和 `<input>` 的 `id` 一样。
+    例如：
+    ```html
+    <label for="username">用户名:</label>
+    <input type="text" id="username" name="username">
+   ```
+   这段代码中，`<input>` 元素的 id 属性值为 "username"，而 <label> 元素的 for 属性值也是 "username"。这样就建立了两者之间的关联。
+   将 `<label>` 和 `<input>` 元素绑定在一起主要有以下几个用处：
+
+   1. 提高可访问性：通过绑定，屏幕阅读器可以识别这个标签和对应的输入字段，从而帮助视障用户理解应在该字段中输入什么信息。
+   2. 扩大点击区域：用户可以通过点击标签来聚焦或激活对应的输入框，这样就增大了可点击的区域，使得操作更加方便，尤其是在触屏设备上。
+   3. 提高表单的易用性：标签为输入字段提供了清晰的说明，使得表单更容易理解和使用，从而提高了用户体验。
+
+    为了实现绑定，需要给 `<input>` 元素指定一个 `id` 属性，并且让 `<label>` 的 `for` 属性的值与之相匹配。
+
+7. 蓝桥杯样式题怎么做？
+   1.判断规则 
+    它和你在题目里说的都是检查点，他测试测试的就是和你说的那些东西。那些是**硬性规定**的，比如两个间距离有多宽，是否对齐，其他的他没说的，可以**看着来**。  
+
     
 # 源码
-```
-function collectPuzzle(...puzzles) {
-  // TODO:在这里写入具体的实现逻辑
-  // 对所有的拼图进行收集，获取不同拼图类型的结果，并返回
-
-  let newa = [];
-  puzzles.forEach((item,index)=>{
-    item.forEach((item2,index)=>{
-      if(newa.every(e => e!=item2)){
-        newa.push(item2)
-      }
+使用纯css解决
+```css
+/* TODO: 考生需要完成以下内容 */
+@media (max-width: 800px) {
+    .row {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-column-gap: 20px;
+        margin: 20px 0;
+    }
+    #tutorials img {
+        margin:0px;
+        padding: 10px;
+        border: 1px solid #86fbfb;
+        border-radius: 25px;
+        width: 100%;
+        display: block;
+    }
+    label.menu-btn {
+        display: block;
+        margin-left: 20px;
+    }
+    .menu{
+        height: 54px;
+    }
+    .collapse {
+        display: none;
+    }
+    .menu-btn{
+        line-height: 54px;
+        color:rgb(104,104,104)
 
     }
-    )
 
-  })
-  return newa;
-}
-```
-或者用set解决
-```javascript
-function collectPuzzle(...puzzles) {
-  // TODO:在这里写入具体的实现逻辑
-  // 对所有的拼图进行收集，获取不同拼图类型的结果，并返回
-
-  let newa = new Set();
-
-  puzzles.forEach((item,index)=>{
-    item.forEach((item2,index)=>{
-      newa.add(item2)
+    .menu-btn:hover{
+        color:white;
+        cursor:pointer;
     }
-    )
+    .menu-btn:checked ~ .collapse{
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-column-gap: 20px;
+        background-color: #000;
 
-  })
-  console.log(...newa,newa)
-  return [...newa];
+    }
+    .dropdown:hover ul {
+        display: flex;
+        flex-direction: column;
+    }
+    .dropdown ul {
+        background: #fff;
+        padding: 0;
+    }
+    .dropdown ul a,
+    .dropdown:hover ul a {
+        color: #000;
+    }
+    .dropdown ul a:hover,
+    .dropdown:hover ul a:hover {
+        color: rgb(2, 107, 107);
+    }
+    .dropdown ul ul {
+        border-bottom: 1px #ccc solid;
+        border-top: 1px #ccc solid;
+        box-shadow: none;
+        margin-bottom: 16px;
+        max-width: 100%;
+        position: relative;
+    }
+    .dropdown {
+        position: relative;
+    }
+    .dropdown li a {
+        display: block;
+        padding: 8px 16px;
+        white-space: nowrap;
+    }
+    .dropdown ul {
+        box-shadow: 1px 1px 3px 0 rgba(0, 0, 0, 0.5);
+        padding: 8px 0;
+        position: absolute;
+        min-width: 100%;
+    }
+
 }
 ```
 
