--- a/题目试炼/2022年大学组省赛/冬奥大抽奖.md
+++ b/题目试炼/2022年大学组省赛/冬奥大抽奖.md
@@ -1,10 +1,10 @@
-# 题目要求
+## 题目要求
 完成 js/trafficlights.js 文件中的 red、green 和 trafficlights 函数，达到以下效果：
 1. 页面加载完成 3 秒后灯的颜色变成红色。
 2. 在灯的颜色变成红色的 3 秒后，灯的颜色变成绿色（即 6 秒后灯光变成绿色）。
 3. 随后颜色不再变化。
 4. 请通过修改 display 属性来显示不同颜色的灯的图片。
-# 知识点盲区
+## 知识点盲区
 1. js是如何作用在html的？
   1. Html的js生命周期
     HTML中的JavaScript生命周期主要关联于网页的加载、更新和卸载过程。这个生命周期通常包括以下几个关键阶段：
