--- a/题目试炼/2022年大学组省赛/图片水印生成.md
+++ b/题目试炼/2022年大学组省赛/图片水印生成.md
@@ -1,7 +1,7 @@
-# 题目来源  
+## 题目来源  
 *[图片水印生成-官方题目链接](https://www.lanqiao.cn/problems/5134/learning/?subject_code=4&group_code=2&match_num=14&match_flow=1&origin=cup&page=1)*  
 
-# 题目要求
+## 题目要求
 请完善 js/index.js 文件中的 TODO 部分，实现创建水印函数的功能 ，创建的水印需要使用 <span> 标签展示。
 
 createWatermark 函数参数说明
@@ -15,7 +15,7 @@ count	水印数量	number
 完成后的效果如下：
 ![image](https://github.com/lulu546/lanqiao-web-study/assets/87536202/2a90f64e-da0e-4b9b-8a44-0ec67f04040e)
 
-# 核心知识点
+## 核心知识点
 1. 关于transform的使用  
    CSS transform 属性允许你旋转，缩放，倾斜或平移给定元素。这是通过修改 CSS 视觉格式化模型的坐标空间来实现的。  
    其中，transform-functions 可以是以下几种：  
@@ -30,5 +30,5 @@ count	水印数量	number
     
 
 
-# 总结
+## 总结
 transform的css属性忘了
