--- a/题目试炼/2022年大学组省赛/寻找小狼人.md
+++ b/题目试炼/2022年大学组省赛/寻找小狼人.md
@@ -1,13 +1,13 @@
-# 题目来源  
+## 题目来源  
 *[寻找小狼人-官方题目链接](https://www.lanqiao.cn/courses/9791/learning/?id=525796&compatibility=false)*  
 
-# 题目要求
+## 题目要求
 在本题 index.html 已经给出的数组中，我们可以通过数组的 filter 方法：cardList.filter((item) => item.category == "werewolf") 返回一个都是狼人的新数组。但是技术主管为了考验大家的技术，规定了在代码中任何地方都不能出现 filter 关键字。所以我们需要封装一个 myarray 方法来实现类似数组 filter 的功能。
 
 狼人比较狡猾，筛选狼人的条件可能会变化，例如 item.name，请实现一个通用的方法。
 完成封装后，页面效果会自动完成，效果见文件夹下 effect.gif（请使用 VS Code 或者浏览器打开 gif 图片）。
 
-# 核心知识点
+## 核心知识点
 ```
   let newcardList = cardList.myarray(
           (item) => item.category == "werewolf"
@@ -40,7 +40,7 @@
     let getObj = () => ({ key: 'value' });  
     console.log(getObj()); // 输出：{ key: 'value' }  
   
-# 源码
+## 源码
 ```
 // 返回条件为真的新数组
 Array.prototype.myarray = function(cb) {
@@ -59,7 +59,7 @@ Array.prototype.myarray = function(cb) {
 
 ```
 
-# 总结
+## 总结
 尝试使用字符串判断去实现这个功能，但是不行。他的判分标准是本题完全实现题目目标得满分，否则得 0 分。这个题应该算是比较有难度的了，让人第一眼有些没有思路。  
 而且这个题的描述没有那么准确，比如筛选狼人的条件可能会变化，但没说怎么变化。
 如果你不了解箭头函数的话，的确如此，如果你了解**箭头函数**知道此时传进来的是一个**回调函数**，那这题就是**秒杀题**。傻逼才传字符串，传函数的自由度比传字符串的自由度高太多了。  
