--- a/题目试炼/2022年大学组省赛/布局切换.md
+++ b/题目试炼/2022年大学组省赛/布局切换.md
@@ -1,7 +1,7 @@
-# 题目来源  
+## 题目来源  
 *[布局切换-官方题目链接]([https://www.lanqiao.cn/courses/9791/learning/?id=525793&compatibility=false](https://www.lanqiao.cn/courses/9791/learning/?id=525794&compatibility=false))*  
 
-# 题目要求
+## 题目要求
 请在 index.html 文件中补全代码，最终实现数据渲染及切换布局的效果。
 
 具体需求如下：
@@ -19,7 +19,7 @@
 ![image](https://github.com/lulu546/lanqiao-web-study/assets/87536202/8575f350-ffdf-4728-a476-597c0b200c74)
 
 完成后的效果见文件夹下面的 gif 图，图片名称为 effect.gif（提示：可以通过 VS Code 或者浏览器预览 gif 图片）。
-# 核心知识点
+## 核心知识点
 1. 完成数据请求
    1. Vue2
         1. Vue2选项式API是如何作用的？  
@@ -219,7 +219,7 @@
       
    
 
-# 源码
+## 源码
 ```
 <!-- TODO：请在下面实现需求 -->
 <!DOCTYPE html>
@@ -294,6 +294,6 @@
 
 ```
 
-# 总结  
+## 总结  
 乌鱼子，为什么是Vue2不是Vue3,我是上来就直接学的Vue3+组合试API+Ts。现在学Vue2倒也是很快，但是还是要学一会的。methods写成了method找了半天，难绷。😓
 但总体还是比较简单的，动态渲染,条件渲染，vue2基本框架，axios的使用。大概就这四点。
