--- a/题目试炼/2022年大学组省赛/课程列表.md
+++ b/题目试炼/2022年大学组省赛/课程列表.md
@@ -1,7 +1,7 @@
-# 题目来源  
+## 题目来源  
 *[课程列表-官方题目链接](https://www.lanqiao.cn/courses/9791/learning/?id=525797&compatibility=false)*  
 
-# 题目要求
+## 题目要求
 1. 完成数据请求（数据来源 js/carlist.json）。在项目目录下已经提供了 axios，考生可自行选择是否使用。
 2. 完成数据分页显示，每页 5 条数据，默认当前页码为第一页（即 pageNum = 1 ），按照顺序第一页显示 1-5 条，第二页显示 6-10 条，依此类推。将每条数据显示到 list-group 元素中。使用已有代码中 list-group，不要修改 list-group 元素的 DOM 结构。动态渲染时，list-group 示例代码可删除。
 3. 当页码为第一页时，上一页为禁用状态（class=disabled），点击无任何变化。
@@ -9,7 +9,7 @@
 5. 在 id 为 pagination 元素中正确显示当前页码和总页码（即最大页码）。当前页码变量使用 pageNum，总页码变量使用 maxPage。请勿修改当前页码和总页码的变量名称，以免造成判题无法通过。
 完成后的效果见文件夹下面的 gif 图，图片名称为 effect.gif（提示：可以通过 VS Code 或者浏览器预览 gif 图片）。
 
-# 核心知识点
+## 核心知识点
 1. axios是否可以完成json的分页操作？
    不可以，需要后端有相应的分页接口才行，如果只有数据，他的分页始终是前端分页，就算他有分页操作但是颗粒度也不能得到保障。
 2. 如何通过dom流进行循环渲染？innerHTML使用？
@@ -23,7 +23,7 @@
    
 
 
-# 源码
+## 源码
 ```
 let pageNum = 1; // 当前页码，默认页码1
 let maxPage; // 最大页数
@@ -97,6 +97,6 @@ async function init(){
 }
 ```
 
-# 总结
+## 总结
 innerHtml主要考察的是，值得注意的是innerHtml属性用于获取或设置某个元素内部的 HTML 内容。当你使用 innerHTML 设置元素的内容时，它实际上是在重置该元素内部的 HTML。这意味着，原有的内部内容将被你通过 innerHTML 指定的新内容完全替换。  
 就是你innerHtml的内容是完全替换它内部的html的内容的。
