--- a/题目试炼/2022年大学组省赛/购物车.md
+++ b/题目试炼/2022年大学组省赛/购物车.md
@@ -1,7 +1,7 @@
-# 题目来源  
+## 题目来源  
 *[购物车-官方题目链接](https://www.lanqiao.cn/courses/9791/learning/?id=525795&compatibility=false )*  
 
-# 题目要求
+## 题目要求
 请在 index.html 文件中补全代码，最终实现购物车商品管理的功能。
 注意：请勿修改 js/goods.js 文件中提供的数据！
 具体需求如下：
@@ -14,7 +14,7 @@
 如果减后数量为 0，则将该商品从购物车中移除。
 完成后的效果见文件夹下面的 gif 图，图片名称为 effect.gif（提示：可以通过 VS Code 或者浏览器预览 gif 图片）。
 
-# 核心知识点
+## 核心知识点
 1. Vue2的响应式更新限制
    当你尝试更新 cartList 中商品的数量或者向 cartList 中添加新商品时，可能会遇到响应式更新的问题。这主要是因为 Vue 2 的响应式系统有一些限制，尤其是处理数组和对象时。
     1. 直接修改数组中对象的属性  
@@ -140,7 +140,7 @@
 选择合适的方法取决于你的具体需求，如是否需要原地修改数组、是否要删除满足特定条件的所有元素等。
 
 
-# 源码
+## 源码
 ```
 <!DOCTYPE html>
 <html>
@@ -252,5 +252,5 @@
 
 ```
 
-# 总结
+## 总结
 Vue2更新没想到还有坑，得用push，pop，shift，splice等函数或者用Vue.set实现。js的for...in，for...of，还有forEach，传统的for有点混淆了。但总体不算难。
