--- a/题目试炼/2023年大学组省赛/收集帛书碎片.md
+++ b/题目试炼/2023年大学组省赛/收集帛书碎片.md
@@ -1,12 +1,12 @@
-# 题目来源  
+## 题目来源  
 *[收集禁术碎片-官方题目链接](https://www.lanqiao.cn/problems/5135/learning/?subject_code=4&group_code=1&match_num=14&match_flow=1&origin=cup)*  
 
-# 题目要求
+## 题目要求
 请在 collect-puzzle.js 文件中补全函数 collectPuzzle 中的代码，返回包含不同帛书碎片的数组，最终拼出完整的战国帛书，需要注意：  
   -同一个人收集的帛书碎片可能是有重复的。  
   -同一组内不同的人收集的帛书碎片也可能是有重复的。  
   -工具函数需要统计所有人获取的不同帛书碎片，而不是帛书碎片数量。  
-# 核心知识点
+## 核心知识点
 1. 数组去重
    在JavaScript中，对数组去重有多种方法，以下是几种常用的方法：  
     方法1：使用 Set 和 Spread Operator  
@@ -90,7 +90,7 @@
     const myArray = Array.from(mySet);
     ```
     
-# 源码
+## 源码
 ```
 function collectPuzzle(...puzzles) {
   // TODO:在这里写入具体的实现逻辑
@@ -130,5 +130,5 @@ function collectPuzzle(...puzzles) {
 }
 ```
 
-# 总结
+## 总结
 很简单的题，记得return一个数回去。然后能用set就用set。
