--- a/题目试炼/2023年大学组省赛/电影院排座位.md
+++ b/题目试炼/2023年大学组省赛/电影院排座位.md
@@ -1,13 +1,13 @@
-# 题目来源  
+## 题目来源  
 *[电影院排座位-官方题目链接](https://www.lanqiao.cn/problems/5133/learning/?subject_code=4&group_code=2&match_num=14&match_flow=1&origin=cup)*  
 
-# 题目要求
+## 题目要求
 请在 css/style.css 文件中的 TODO 下补全样式代码，最终达到预期布局效果，需要注意：
 
 1. 座位区域和荧幕间隔 50px。
 2. 座位区域每一行包含 8 个座位。
 3， 第 2 列和第 6 列旁边都是走廊，需要和下一列间隔 30px，其他列都只需要间隔 10px。
-# 核心知识点
+## 核心知识点
 1. gird布局
 CSS Grid 布局是一种为二维布局而设计的 CSS 技术，允许开发者创建复杂的网格布局。要创建一个 Grid 布局，你需要使用一系列的属性，这些属性可以应用于容器（即 Grid 容器）和子项（即 Grid 项）。以下是一些主要的 Grid 布局属性：
 
@@ -176,7 +176,7 @@ CSS Grid 布局是一种为二维布局而设计的 CSS 技术，允许开发者
     }
     ```
     
-# 源码
+## 源码
 ```
 * {
   box-sizing: border-box;
@@ -239,5 +239,5 @@ body {
 }
 ```
 
-# 总结
+## 总结
 gird布局，gird布局说实话写的真不多，都是直接复制Copy代码，正好这次算是练一下。
