--- a/题目试炼/2023年大学组省赛/自适应页面.md
+++ b/题目试炼/2023年大学组省赛/自适应页面.md
@@ -1,7 +1,7 @@
-# 题目来源
+## 题目来源
 *[自适应页面-官方题目链接](https://www.lanqiao.cn/problems/5136/learning/?subject_code=4&group_code=2&match_num=14&match_flow=1&origin=cup&page=1)*
 
-# 题目要求
+## 题目要求
 初始页面已经具备基础的布局和交互效果，包含 hover 高亮，展示二级菜单等。效果见文件夹下面的 gif 图，图片名称为 default.gif（提示：可以通过 VS Code 或者浏览器预览 gif 图片）：
 
 请通过补全 css/style.css 中代码或操作 DOM 的方式，达到根据屏幕大小显示不同布局的效果。
@@ -18,7 +18,7 @@
 
 完成后的效果见文件夹下面的 gif 图，图片名称为 effect.gif（提示：可以通过 VS Code 或者浏览器预览 gif 图片）： 完成效果
 考生可以根据需要使用 jQuery 实现脚本控制，也可以只使用纯 CSS 实现。
-# 核心知识点
+## 核心知识点
 1. 页面媒体查询  
    在Web开发中，媒体查询（Media Queries）是一种CSS技术，用于根据不同的媒体类型和视口特性来应用不同的样式规则。这对于响应式设计尤为重要，因为它允许开发者为不同尺寸的设备（如手机、平板和桌面计算机）创建适应性布局。  
     媒体查询的基本语法如下：
@@ -117,7 +117,7 @@
     它和你在题目里说的都是检查点，他测试测试的就是和你说的那些东西。那些是**硬性规定**的，比如两个间距离有多宽，是否对齐，其他的他没说的，可以**看着来**。  
 
     
-# 源码
+## 源码
 使用纯css解决
 ```css
 /* TODO: 考生需要完成以下内容 */
@@ -205,5 +205,5 @@
 }
 ```
 
-# 总结
+## 总结
 还是比较考量css基础的，媒体查询，label标签的使用，以及css选择器的使用。还有借助伪元素实现css交互布局。
