--- a/题目试炼/2023年大学组省赛/全球新冠疫情数据统计.md
+++ b/题目试炼/2023年大学组省赛/全球新冠疫情数据统计.md
@@ -1,7 +1,7 @@
-# 题目来源
+## 题目来源
 *[全球新冠疫情数据统计-官方题目链接](https://www.lanqiao.cn/problems/5137/learning/?subject_code=4&group_code=2&match_num=14&match_flow=1&origin=cup)*
 
-# 题目要求
+## 题目要求
 请在 index.html 文件中补全代码，具体需求如下：
 在组件加载时利用 axios 请求地址为 ./js/covid-data.json （必须使用该路径请求，否则可能会请求不到数据） 文件中的数据。并将所有国家名称在 select 标签下的 option 元素进行渲染（保留默认选项 “Select Country”），效果如下：
 图片描述
@@ -16,7 +16,7 @@ TotalDeaths	累计死亡	number
 当用户改变 select 筛选器的选择时，根据用户的选择改变页面中展示的国家名以及确诊和死亡人数数据。如果用户没有选择任何国家，则展示默认值 0 和默认标题“请选择国家”。以选择法国为例： 图片描述
 页面底部的 ECharts 图表希望显示各个国家的累计确诊人数，请修改 initChart 函数的内容，使得图表 x 轴数据为国家简称，y 轴数据为累计确诊人数，效果如下： 图片描述
 页面最终效果可参考 effect.gif 文件。
-# 核心知识点
+## 核心知识点
 1. select,opention以及Vue2的使用  
    在 Vue 中，click 事件通常不适用于 `<option>` 元素，因为 `<option>` 元素的点击事件并不总是可靠地触发。更常见的做法是在 `<select>` 元素上使用 change 事件来监听用户的选择变化。  
    如果你想要在用户选择某个选项时执行某些操作，你可以在包含这些 `<option>` 的 `<select>` 元素上使用 `@change` 事件，而不是在每个 `<option>` 上使用 `@click`。这样，当用户改变选项时，就会触发 change 事件，并且可以通过事件的目标获取当前选中的值。
@@ -86,7 +86,7 @@ TotalDeaths	累计死亡	number
      }
    }
    ```
-# 源码
+## 源码
 
 ```html
 <!DOCTYPE html>
@@ -266,6 +266,6 @@ TotalDeaths	累计死亡	number
 </html>
 ```
 
-# 总结
+## 总结
 题目难度还好，select之前没怎么接触过，没想到不能绑定click。没好好审题，第二步第一次没做出来。  
 可惜了！一定要仔细审题！
