--- a/题目试炼/2023年大学组省赛/视频弹幕.md
+++ b/题目试炼/2023年大学组省赛/视频弹幕.md
@@ -1,7 +1,7 @@
-# 题目来源
+## 题目来源
 *[视频弹幕-官方题目链接](https://www.lanqiao.cn/problems/5139/learning/?subject_code=4&group_code=2&match_num=14&match_flow=1&origin=cup)*
 
-# 题目要求
+## 题目要求
 请在 js/index.js 文件中补全代码。具体需求如下：
 
 补全 renderBullet 函数中的代码，控制弹幕的显示颜色和移动。功能说明如下：
@@ -13,7 +13,7 @@
 当弹幕最右端完全移出 #video 元素时，移除 span 元素。
 补全 #sendBulletBtn 元素的绑定事件，点击发送按钮，输入框中的文字出现在弹幕中，样式不同于普通弹幕（样式红色字体红色框已设置，类名为 create-bullet ）。通过调用 renderBullet 方法和正确的传参实现功能。
 最终效果可参考文件夹下面的 gif 图，图片名称为 effect.gif（提示：可以通过 VS Code 或者浏览器预览 gif 图片）。
-# 核心知识点
+## 核心知识点
 1. 通过计时器去写弹幕动画  
 最开始我想的是要通过css平移动画来实现一个计时器动画来，但是仔细看看不好搞，因为他有配置项，如果通过css的keyframe，他是没法实现`每隔 bulletConfig.time（弹幕配置对象） 时间，向左移动距离为 bulletConfig.speed（弹幕配置对象`的需求的。  
 所以另一种解决思路就是用定时器去写。
@@ -21,7 +21,7 @@
 2. ele.getBoundingClientRect();  
 这个api可以获得一个元素的width,height,left,right,top,bottom。  
 注意这里返回的第一它是数字，第二他的left和right是**距离视口的距离，不是距离父元素的距离**。
-# 源码
+## 源码
 ```javascript 
 
 const bullets = [
@@ -127,7 +127,7 @@ if (e.target.checked) {
 })
 ```
 
-# 总结
+## 总结
 蓝桥杯要看懂需求，这个题是写一个弹幕播放软件，这种题有时候不写检测点的。  
 而不写检测点也要能过，就是100%复原。  
 一般可以根据题目去猜出检测点，所以拿到题首先第一步是先猜检测点，然后再写。写完一定要记住一件事。  
